- Fix the overflow of image on the content block - Change the wrapped link with h2 to plain h3

--- a/growth-hacker-custom-blocks/style.css
+++ b/growth-hacker-custom-blocks/style.css
@@ -25,6 +25,7 @@
     }
     .article-block__content {
         display: flex;
+        overflow: hidden;
     }
     .article-block__image {
         flex-shrink: 0;
